Improved SourceBundle. Added some unit tests for SourceBundle. Update to latest version of WALA.
SourceBundle now update script tags' src attributes to point to when
saving to local path. It now fetch every source exactly once and cache
them for further operations.